Version 4.1 with net.bytebuddy.experimental